--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </ul>
 
         <h2>Noções básicas de JavaScript</h2>
-        <p>Crie variáveis ​​armazenando números, strings e booleanos</p>
+        <p>Crie variáveis armazenando números, strings e booleanos</p>
         <ul type="none">
             <li><a href="nbjs01/aula11.html">Aula 11</a> - Criando Variáveis</li>
-            <li><a href="#">Aula 12</a> - Sem Título</li>
+            <li><a href="nbjs01/aula12.html">Aula 12</a> - Usando Variáveis</li>
             <li><a href="#">Aula 13</a> - Sem Título</li>
             <li><a href="#">Aula 14</a> - Sem Título</li>
             <li><a href="#">Aula 15</a> - Sem Título</li>
